package dev.daanh.zombie.world.enums;

public enum WaterBodyType {
    OCEAN,
    SEA
}
