@startuml
title world domain model

left to right direction
skinparam linetype ortho
skinparam nodesep 60
skinparam ranksep 80

package world {
    enum BiomeType {
        TUNDRA
        TAIGA
        TEMPERATE_DECIDUOUS_FOREST
        TEMPERATE_RAINFOREST
        TEMPERATE_GRASSLAND
        MEDITERRANEAN
        HOT_DESERT
        COLD_DESERT
        SAVANNA
        TROPICAL_SEASONAL_FOREST
        TROPICAL_RAINFOREST
        ALPINE
        SWAMP
        COASTAL
        ICE_CAP
    }

    enum WaterBodyType {
        OCEAN
        SEA
    }

    class World {
        - id: UUID
        - name: String
        - seed: long
        - gameTicks: long
    }

    class Continent {
        - id: UUID
        - name: String
        - code: String
    }

    class Country {
        - id: UUID
        - name: String
        - iso: String
        - capital: String
    }

    class Region {
        - id: UUID
        - name: String
        - code: String
    }

    class Settlement {
        - id: UUID
        - geonameId: Long
        - name: String
        - coordinates: Coordinates
        - population: int
        - timezone: String
        - biome: BiomeType
    }

    class Coordinates {
        - latitude: double
        - longitude: double
        - elevation: int
    }

    class WaterBody {
        - id: UUID
        - name: String
        - type: WaterBodyType
    }

    World "1" *-- "0..*" Continent : contains
    Continent "1" *-- "0..*" Country : contains
    Country "1" *-- "0..*" Region : contains
    Region "1" *-- "0..*" Settlement : contains

    package chunk {
        class Chunk extends BaseState {
            - coordinate: ChunkCoordinate
            - settlement: Settlement
            - generatedAt: LocalDateTime
            - generatorVersion: int
        }

        class ChunkCoordinate {
            - x: int
            - y: int
        }
    }

    Chunk "0..*" -- "1" ChunkCoordinate
    Chunk "0..*" -- "0..1" Settlement : located in
}

@enduml